centos7-env-deploy/service_config/nginx_config/Backup_conf_36/iptables
# Firewall configuration written by system-config-firewall
# Manual customization of this file is not recommended.
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
#########################################################
##            ADD_SSH_IP   #####
-A INPUT -s 192.168.1.0/24 -m state --state NEW -m tcp -p tcp --dport 22 -j ACCEPT
-A INPUT -s 112.199.93.34 -m state --state NEW -m tcp -p tcp --dport 22 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 80 -j ACCEPT

##########################################################
##            ADD_ACCESS_IP  ###
-A INPUT -d 224.0.0.0/8 -i eth1 -j ACCEPT
-A INPUT -i eth0 -d 224.0.0.0/8 -j ACCEPT
-A INPUT -s 192.168.1.0/24 -i eth1 -j ACCEPT
-A INPUT -s 103.232.87.218/32 -i eth1 -j ACCEPT
-A INPUT -s 112.199.93.34/32 -i eth1 -j ACCEPT
-A INPUT -s 210.91.40.36/32 -i eth1 -j ACCEPT
-A INPUT -s 112.175.125.199/32 -i eth1 -j ACCEPT
-A INPUT -s 8.8.8.8/32 -i eth1 -j ACCEPT
-A INPUT -s 8.8.4.4/32 -i eth1 -j ACCEPT
-A INPUT -s smtp.bestedm.org -j ACCEPT 
-A INPUT -s sms-api.luosimao.com -j ACCEPT 



##########################################################

-A INPUT -p icmp -j DROP
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -s 0.0.0.0/0  -j DROP
#-A INPUT -j REJECT --reject-with icmp-host-prohibited
#-A FORWARD -j REJECT --reject-with icmp-host-prohibited
COMMIT
